# pilgrim-android

./: .editorconfig  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  gradle.properties  kaijutsu.json  kaijutsu.lock.json  local.properties.example  settings.gradle.kts
.agents/skills/blunder-hunt/: README.md  SKILL.md  skill.yaml
.agents/skills/dispatch-parallel/: README.md  SKILL.md  skill.yaml
.agents/skills/lie-to-them/: README.md  SKILL.md  skill.yaml
.agents/skills/multi-model-synth/: README.md  SKILL.md  skill.yaml
.agents/skills/pr-review/: README.md  SKILL.md  skill.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
.kaijutsu/: agents.yaml  doc-review.yaml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/org.walktalkmeditate.pilgrim.data.PilgrimDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/cpp/whisper/: VENDORING.md
docs/superpowers/plans/: 2026-04-17-stage-2a-voice-recordings-data-layer.md  2026-04-17-stage-2b-audio-capture.md  2026-04-17-stage-2c-active-walk-recording-ui.md  2026-04-17-stage-2d-whisper-transcription.md  2026-04-17-stage-2e-summary-voice-list-and-sweeper.md  2026-04-18-stage-3a-home-tab-walk-list.md  2026-04-18-stage-3b-fonts.md  2026-04-18-stage-3c-calligraphy-path.md  2026-04-18-stage-3d-seasonal-engine.md  2026-04-18-stage-3e-journal-thread.md  2026-04-19-stage-4a-seal-renderer.md  2026-04-19-stage-4b-seal-reveal.md  2026-04-19-stage-4c-goshuin-grid.md  2026-04-19-stage-4d-milestones.md  2026-04-20-stage-5a-meditation-core.md  2026-04-20-stage-5b-temple-bell.md  2026-04-20-stage-5c-voice-guide-manifest.md  2026-04-20-stage-5d-voice-guide-picker-downloads.md  2026-04-20-stage-5e-voice-guide-playback.md  2026-04-20-stage-5f-soundscape-playback.md  2026-04-21-stage-6a-celestial-koan.md  2026-04-21-stage-6b-light-reading-card.md  2026-04-21-stage-7a-photo-reliquary.md  2026-04-24-stage-7b-photo-analysis-tombstone.md  2026-04-24-stage-7c-etegami-renderer.md  2026-04-24-stage-7d-etegami-share.md  2026-04-24-stage-8a-share-journey.md  2026-04-25-stage-8b-collective-counter.md  2026-04-25-stage-9-5-a-bottom-nav.md  2026-04-25-stage-9a-glance-widget.md  2026-04-25-stage-9b-notification-controls.md  (+18 more)
gradle/: libs.versions.toml
(+870 files in other folders)
